Fixing bug 197427. Making insertBefore, appendChild, replaceChild, and removeChild() work correctly on XUL elements by sharing the implementation with nsGenericElement. r=jonas@sicking.cc, sr=bzbarsky@mit.edu